<resources>
    <string name="app_name">FinalProject</string>
    <string name="login_btn_text">Login to account</string>
    <string name="login_reg_btn">Need a new account?</string>
    <string name="action_account_settings">Account Settings</string>
    <string name="action_logout_text">Logout</string>
    <string name="reg_pass_text">Enter Password</string>
    <string name="reg_confirm_pass_text">Confirm Password</string>
    <string name="reg_btn_text">Register Account</string>
    <string name="reg_login_btn_text">Already have an account?</string>
    <string name="setup_name">Your Name</string>
    <string name="setup_phone_no">Your Contact Number</string>
    <string name="setup_btn_name_text">Save Account Settings</string>
    <string name="new_rental_description_text">Add Description</string>
    <string name="post_btn_text">Post Rental</string>
    <string name="new_rental_price_text">Enter Price</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_notification_text">Favourites</string>
    <string name="bottom_account_text">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rental_post_date_text">Post Date</string>
    />
</resources>
