<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryLightColor"
    tools:context=".RegisterActivity">
    <ImageView
        android:id="@+id/regPageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/register_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField4"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:hint="Enter your Email"
        android:textColor="@color/primaryTextColor"
        android:textColorHint="@color/primaryDarkColor"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/primaryDarkColor"
        app:endIconMode="clear_text"
        app:endIconTint="@color/primaryDarkColor"
        app:hintTextColor="@color/primaryDarkColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="55dp"
            android:autoLink="email"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:textColor="@color/primaryTextColor"
            android:textColorHint="@color/primaryDarkColor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField6"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="393dp"
        android:layout_height="60dp"
        android:layout_marginTop="350dp"
        android:hint="@string/reg_pass_text"
        android:textColor="@color/primaryTextColor"
        android:textColorHint="@color/primaryDarkColor"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/primaryDarkColor"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:counterTextColor="@color/primaryDarkColor"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/primaryDarkColor"
        app:hintTextColor="@color/primaryDarkColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="55dp"
            android:password="true"
            android:imeOptions="actionNext"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/primaryTextColor"
            android:textColorHint="@color/primaryDarkColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField5"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="393dp"
        android:layout_height="60dp"
        android:layout_marginTop="450dp"
        android:hint="@string/reg_confirm_pass_text"
        android:textColor="@color/primaryTextColor"
        android:textColorHint="@color/primaryDarkColor"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/primaryDarkColor"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:counterTextColor="@color/primaryDarkColor"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/primaryDarkColor"
        app:hintTextColor="@color/primaryDarkColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="55dp"
            android:password="true"
            android:imeOptions="actionNext"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/primaryTextColor"
            android:textColorHint="@color/primaryDarkColor" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/reg_btn"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="548dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/reg_btn_text"
        android:textColor="@color/primaryDarkColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/primaryDarkColor" />

    <Button
        android:id="@+id/reg_login_btn"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="640dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/reg_login_btn_text"
        android:textColor="@color/secondaryLightColor"
        app:backgroundTint="@color/primaryDarkColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/primaryDarkColor" />

    <ProgressBar
        android:id="@+id/reg_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:backgroundTint="@color/secondaryLightColor"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>